# skopedate

./: .stack-all  CHANGELOG.md  LICENSE  Main.hs  README.md  skopedate.cabal  stack-lts12.yaml  stack-lts13.yaml
src/: Main.hs
test/: tests.hs
